--- a/apps/bender-varken.yml
+++ b/apps/bender-varken.yml
@@ -1,6 +1,6 @@
 #!/bin/bash
 #
-# Title:      PlexGuide (Reference Title File)
+# Title:      PlexGuide (Varken)
 # Author(s):  Bender
 # URL:        https://plexguide.com - http://github.plexguide.com
 # GNU:        General Public License v3.0
