--- a/apps/telegraf.conf
+++ b/apps/telegraf.conf
@@ -113,8 +113,8 @@
   # timeout = "5s"
 
   ## HTTP Basic Auth
-  # username = "telegraf"
-  # password = "metricsmetricsmetricsmetrics"
+   username = "telegraf"
+   password = "metricsmetricsmetricsmetrics"
 
   ## HTTP User-Agent
   # user_agent = "telegraf"
@@ -1322,7 +1322,7 @@
   # mount_points = ["/"]
 
   ## Ignore mount points by filesystem type.
-  ignore_fs = ["tmpfs", "devtmpfs", "devfs", "overlay", "aufs", "squashfs"]
+  ignore_fs = ["tmpfs", "devtmpfs", "devfs", "overlay", "aufs", "squashfs", "mergerfs", "fuse.rclone", "fuse.mergerfs"]
 
 
 # Read metrics about disk IO by device
